* Implemented FR 2830914 [ERDesignerNG] Creating entities is overly complicated
* Implemented FR 2883197 [ERDesignerNG] Add outline window to the editor
* Implemented FR 2892962 [ERDesignerNG] support MSAccess databases (*.mdb)
* Implemented FR 2893195 [ERDesignerNG] provide expand/collapse all children in outli
* Implemented FR 2891900 [ERDesignerNG] export to *.svg - create *real* SVG-XML
* Implemented FR 2893184 [ERDesignerNG] (de)select all function in tableselect dialog
* Implemented FR 2895534 [ERDesignerNG] show RevEngEd only on DBs with schema support
* Implemented FR 2896460 [ERDesignerNG] Replace PDF Help viewer
* Fixed typos in Reverse-Engineer dialog (german) and RelationEditor (german)
* Performance tuning in Intelligent Layout functionality
* Tables are now layed out like a grid after reverse engineering
* Fixed ClassCastException when moving relation labels
* Fixed some issues regarding object naming in model repository on different databases

Release 2.6.0

* Added support for scaffolded properties based on the current dialect for tables, views, relations and domains
* Bug Fixing 2949508 [ERDesignerNG] Rev Eng not handling UDTs in PostgreSQL
* Bug Fixing 2952877 [ERDesignerNG] Custom Types
* Bug Fixing 2933615 [ERDesignerNG] UUID Datatype not Supported in PostgreSQL
* Implemented FR 2982848 [ERDesignerNG] Hide password in ConnectionEditor
* Implemented FR 2925550 [ERDesignerNG] Compare with other models

Release 2.7.0

* Implemented FR 2895866 [ERDesignerNG] force connection aliases to be unique
* Implemented FR 2880354 [ERDesignerNG] wrap and indent *.mxm
* Implemented FR 2895112 [ERDesignerNG] do *not* show column-comments by default
* Implemented FR 2895244 [ERDesignerNG] make the context-menus consistent
* SQL Area and View editor are not syntax highlighted
* Implemented FR 2895576 [ERDesignerNG] TableSelectEditor devide tables from views
* Implemented FR 3158981 [ERDesignerNG] Add SQL Browser the the UI